Resolves #51 Stat boxes are aligned in all browsers
Resolves #56
Fixed layout quirks
Fixed nav overlap in IE

--- a/app/assets/stylesheets/_layout.styl
+++ b/app/assets/stylesheets/_layout.styl
@@ -8,16 +8,15 @@ body > .container
   cf()
 
 main
-  background white
+  background-color white
   border-width 0 1px
-  padding-top 80px
   header
     background-color manatee
     color white
-    padding 40px 20px
+    padding 120px 20px
 
 header.course-page
-  padding 40px 20px 10px
+  padding 120px 20px 10px
 
 header
   border-bottom 1px solid zircon
